# gnubs

./: README
lib/: utils.sh
share/templates/: .gitignore  ChangeLog  Makefile.am  NEWS  README  bootstrap.conf  configure.ac
share/templates/doc/: Makefile.am  template.texi
share/templates/src/: Makefile.am  main.c
share/templates/testsuite/: Makefile.am  dummy.c  dummy.sh
